# Tech-Articles

./: README.md
docs/LLM-Trends-2025/: report.md
docs/LLM_Trends_2025/: Readme.md
docs/VSSC_Technical_Assistant_Recruitment_2025/: Readme.md
docs/ai-agent-roadmap-2025/: Readme.md
github_article_creator/: pyproject.toml  report.md  upload.md
github_article_creator/src/github_article_creator/: crew.py  main.py
github_article_creator/src/github_article_creator/config/: agents.yaml  agents.yaml~  tasks.yaml  tasks.yaml~
github_article_creator/src/github_article_creator/tools/: github_tool.py
