[project]
name = "github_article_creator"
version = "0.1.0"
description = "github_article_creator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.126.0,<1.0.0"
]

[project.scripts]
github_article_creator = "github_article_creator.main:run"
run_crew = "github_article_creator.main:run"
train = "github_article_creator.main:train"
replay = "github_article_creator.main:replay"
test = "github_article_creator.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
